@@ -10,19 +10,17 @@ import org.jsoup.select.Elements;
 
 import java.net.URI;
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentLinkedQueue;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.concurrent.*;
+import java.util.concurrent.atomic.AtomicInteger;
 
 @Slf4j
 @Data
 public class SimpleWebCrawler {
-    private final ExecutorService executor = Executors.newFixedThreadPool(15);
+    private final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
     private final Queue<String> urlQueue = new ConcurrentLinkedQueue<>();
     private final Set<String> visitedUrls = Collections.newSetFromMap(new ConcurrentHashMap<>());
-    // Makes sure no duplicate URLs are enqueued
     private final Set<String> urlCache = Collections.newSetFromMap(new ConcurrentHashMap<>());
+    private static final AtomicInteger countDownLock = new AtomicInteger(0);
     private final String baseDomain;
 
     public SimpleWebCrawler(String startUrl) {
@@ -39,51 +37,59 @@ public class SimpleWebCrawler {
     }
 
     private void startCrawling() {
-        while (!urlQueue.isEmpty()) executor.submit(this::crawl);
-        executor.shutdown();
+        while (!urlQueue.isEmpty() || countDownLock.get() > 0) {
+            String url = urlQueue.poll();
+            countDownLock.getAndIncrement();
+            if (!urlQueue.isEmpty()) {
+                submitCrawl(url);
+            }
+        }
+
+        shutdownAndAwait();
     }
 
+    private void submitCrawl(String url) {
+        executor.submit(() -> {
+            crawl(url);
+            countDownLock.getAndDecrement();
+        });
+    }
 
-    public void crawl() {
-        int totalScrapedCount = 0;
-        while (!urlQueue.isEmpty()) {
-            String url = urlQueue.poll();
-            visitedUrls.add(url);
-            log.info("Visiting: {}", url);
+    public void crawl(String url) {
+        if (!visitedUrls.add(url)) return; // Avoid reprocessing
 
-            try {
-                Document doc = Jsoup.connect(url).get();
-                Elements links = doc.select("a[href]");
+        log.info("Visiting: {}", url);
+        try {
+            Document doc = Jsoup.connect(url).get();
+            Elements links = doc.select("a[href]");
 
-                for (Element link : links) {
-                    totalScrapedCount++;
-                    String nextUrl = normalizeUrl(link.absUrl("href"));
-                    if (isValidUrl(nextUrl)) {
-                        log.info("  Found: {}", nextUrl);
-                        if (!urlCache.contains(nextUrl)) {
-                            enqueueUrl(nextUrl);
-                        }
-                    }
+            for (Element link : links) {
+                String nextUrl = normalizeUrl(link.absUrl("href"));
+                if (isValidUrl(nextUrl)) {
+                    log.info("|----> Found: {}", nextUrl);
+                    enqueueUrl(nextUrl);
                 }
-
-                log.info("  Total links scraped: {}", totalScrapedCount);
-                log.info("  Total unique links processed: {}", visitedUrls.size());
-                log.info("  Current queue size: {}", urlQueue.size());
-            } catch (Exception e) {
-                log.error("Failed to crawl: {}", url);
             }
+
+            log.info("  visitedUrls size: {}", visitedUrls.size());
+            log.info("  urlQueue size: {}", urlQueue.size());
+            log.info("  urlCache size: {}", urlCache.size());
+        } catch (Exception e) {
+            log.error("Failed to crawl: {}", url, e);
         }
     }
 
     private void enqueueUrl(String url) {
-        if (!urlCache.contains(url)) {
+        log.info("Enqueuing: {}", url);
+        if (urlCache.add(url)) { // Ensures unique URLs are enqueued
             urlQueue.add(url);
-            urlCache.add(url);
+            countDownLock.getAndIncrement();
+            submitCrawl(url);
         }
     }
 
     boolean isValidUrl(String url) {
-        return url.startsWith("http") && getDomain(url).equals(baseDomain) && !urlCache.contains(url);
+        return url.startsWith("http") && getDomain(url).equals(baseDomain);
     }
 
     String getDomain(String url) {
@@ -97,7 +103,23 @@ public class SimpleWebCrawler {
     @SneakyThrows
     public static String normalizeUrl(String url) {
         URI uri = new URI(url);
-        String normalized = uri.getScheme() + "://" + uri.getHost() + uri.getPath();
-        return normalized.toLowerCase().replaceAll("/+$", "");
+        return (uri.getScheme() + "://" + uri.getHost() + uri.getPath())
+                .toLowerCase()
+                .replaceAll("/+$", "");
+    }
+
+    private void shutdownAndAwait() {
+        executor.shutdown();
+        try {
+            while (!executor.awaitTermination(1, TimeUnit.SECONDS)) {
+                log.info("Waiting for crawling to complete...");
+            }
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            log.error("Interrupted while waiting for completion", e);
+        }
+        log.info("Crawling complete.");
+        log.info("total links processed: {}", urlCache.size());
+        urlCache.forEach(url -> log.info("from the cache: {}", url));
     }
 }
